# ak-lab4

./: .gitattributes  .gitignore  README.md  pyproject.toml  variant.txt
.github/workflows/: ci.yml
examples/: prob1.lisp
golden/: README.md  cat.yml  double_math.yml  hello.yml  hello_user_name.yml  prob1.yml  sort.yml
golden/cat/: code.listing  source.tv
golden/double_math/: code.listing  source.tv
golden/hello/: code.listing  data.listing  source.lisp  source.tv
golden/hello_user_name/: code.listing  data.listing  expected_output.txt  source.lisp  source.tv
golden/prob1/: code.listing  expected_output.txt  source.tv
golden/pstr_two/: code.listing  data.listing  source.tv
golden/sort/: code.listing  input.txt  output.txt  source.tv
hw/: control_unit.md  control_unit.mmd  datapath.md  datapath.mmd
sceme/: README-ControlUnit.md
scripts/: regenerate_golden.py  update_golden.py
src/ak_lab4/: __init__.py  cpu.py  io_schedule.py  loader.py  machine.py  memory.py
src/ak_lab4/isa/: __init__.py
src/ak_lab4/simulator/: __init__.py  __main__.py
src/ak_lab4/translator/: __init__.py  __main__.py  ast.py  cli.py  codegen.py  lexer.py  parser.py
tests/: golden_support.py  test_golden.py  test_golden_core_cases.py  test_golden_hello.py  test_golden_phase_a.py  test_machine.py  test_simulator_phase1.py  test_smoke.py  test_translator_cli.py  test_translator_codegen.py  test_translator_defun.py  test_translator_eq.py  test_translator_parse.py  test_translator_progn.py  test_translator_setq.py
tests/integration/: test_translator_simulator_io.py
tests/isa/: test_opcodes.py
tests/simulator/: test_irq_schedule.py  test_phase1.py  test_scalar_phases.py  test_simulator_input_arg.py  test_superscalar.py
tests/translator/: test_cli.py  test_codegen.py  test_compare.py  test_defun.py  test_eq.py  test_if.py  test_io.py  test_load_store.py  test_parse.py  test_progn.py  test_pstr.py  test_setq.py
